--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "@hapi/joi": "^15.0.3",
-    "bcryptjs": "~2.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "jsonwebtoken": "~8.4.0",
-    "mongodb": "~3.1.10",
-    "mongoose": "~5.7.5",
-    "morgan": "~1.9.0"
+    "@hapi/joi": "^15.1.1",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.4.1",
+    "mongoose": "^5.4.2",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.11"
+    "nodemon": "^2.0.2"
   }
 }
